--- a/app/views/lessons/lesson005.html.haml
+++ b/app/views/lessons/lesson005.html.haml
@@ -75,7 +75,7 @@
     .syntax
       %pre
         %code
-          apt-get install -y bzip2
+          sudo apt-get install -y bzip2
           wget https://repo.continuum.io/archive/Anaconda2-5.1.0-Linux-x86_64.sh
           bash Anaconda2-5.1.0-Linux-x86_64.sh
           conda install tqdm
