--- a/app/views/lessons/lesson005.html.haml
+++ b/app/views/lessons/lesson005.html.haml
@@ -125,7 +125,7 @@
         =render 'lesson005publish_tkrs'
 
   %li
-    On mgr:
+    On mgr I ran this:
     .syntax
       %pre
         %code bash ~/publish_tkrs.bash
@@ -137,11 +137,16 @@
       %pre
         =render 'lesson005workon_tkrs'
   %li
-    On worker:
+    On worker I ran this:
     .syntax
       %pre
         %code bash ~/workon_tkrs.bash
-
+  %li I found new predictions in my pubsub611 bucket!
+  %li I saw them here:
+  %li
+    %a(href='https://console.cloud.google.com/storage' target='x')
+      https://console.cloud.google.com/storage
+  
 %p This lesson is Under Construction; I offer more content and discussion soon.
 
 %p
