--- a/app/views/lessons/_lesson005workon_tkrs1.erb
+++ b/app/views/lessons/_lesson005workon_tkrs1.erb
@@ -1,4 +1,4 @@
-# coding utf-8
+<code class='python'># coding utf-8
 """
 workon_tkrs.py
 
@@ -88,3 +88,4 @@ predictions_df.to_csv(csvf_s, float_format='%0.4f', index=False)
 sp.run('gsutil cp '+csvf_s+' gs://pubsub611/predictions/', shell=True)
 
 'bye'
+</code>
