--- a/app/views/lessons/_lesson005publish_tkrs.erb
+++ b/app/views/lessons/_lesson005publish_tkrs.erb
@@ -10,6 +10,12 @@
 # bash ~/publish_tkrs.bash
 
 export PROJECT=pubsub-197323
+
+gcloud pubsub topics        create         topic10       --project $PROJECT
+gcloud pubsub subscriptions create --topic topic10 sub10 --project $PROJECT
+
+sleep 20
+
 gcloud pubsub topics publish topic10 --message "Please work on FB now"   --project $PROJECT
 gcloud pubsub topics publish topic10 --message "Please work on AAPL now" --project $PROJECT
 gcloud pubsub topics publish topic10 --message "Please work on AMZN now" --project $PROJECT
