--- a/app/views/lessons/lesson005.html.haml
+++ b/app/views/lessons/lesson005.html.haml
@@ -196,8 +196,11 @@
   %li
     %a(href='https://console.cloud.google.com/storage' target='x')
       https://console.cloud.google.com/storage
-  
-%p This lesson is Under Construction; I offer more content and discussion soon.
+  %li They looked like this:
+  %li
+    %img(src='/lesson005/z014.png')
+  %li
+    %img(src='/lesson005/z015.png')
 
 %p
   %a(href='#top') [top]
