--- a/app/views/lessons/lesson005.html.haml
+++ b/app/views/lessons/lesson005.html.haml
@@ -180,7 +180,7 @@
       %pre
         =render 'lesson005workon_tkrs0'
   %li
-    Next, on worker:
+    Next, on worker, I did this:
     vi ~/workon_tkrs.py
   %li
     .syntax
