--- a/app/views/lessons/lesson005.html.haml
+++ b/app/views/lessons/lesson005.html.haml
@@ -1,9 +1,12 @@
-%h1#top Lesson 005 [ Under Construction , Screenshots coming...]
+%h1#top Lesson 005 [ Use GCP Pub/Sub to Distribute Python ]
 
-%p Refer to 2018-03-09 Meetup:
-%p
-  %a(href='https://www.meetup.com/cs101A/events/248451696' target='x')
-    https://www.meetup.com/cs101A/events/248451696
+%p This lesson shows how I used GCP Pub/Sub to coordinate a Python script.
+
+%p The script is named workon_tkrs.py.
+
+%p The script was deployed across a GCP-Kubernetes cluster.
+
+%p Deployment was done using the GCP web-UI and ssh.
 
 %p This lesson is inspired by a Will Crichton and his github repo:
 
