--- a/app/views/lessons/lesson005.html.haml
+++ b/app/views/lessons/lesson005.html.haml
@@ -177,7 +177,7 @@
       %pre
         %code bash ~/publish_tkrs.bash
   %li
-    Next, on worker:
+    Next, on worker, I did this:
     vi ~/workon_tkrs.bash
   %li
     .syntax
