--- a/app/views/lessons/index.html.haml
+++ b/app/views/lessons/index.html.haml
@@ -10,5 +10,5 @@
   %li
     %a(href='/lessons/lesson004') Lesson 004 [ Google GCP Dataflow ]
   %li
-    %a(href='/lessons/lesson005') Lesson 005 [ Use GCP Pub/Sub to Distribute Python ]
+    %a(href='/lessons/lesson005') Lesson 005 [ Distributed Python with GCP Pub/Sub ]
 
