--- a/app/views/lessons/lesson005.html.haml
+++ b/app/views/lessons/lesson005.html.haml
@@ -1,4 +1,4 @@
-%h1#top Lesson 005 [ Use GCP Pub/Sub to Distribute Python ]
+%h1#top Lesson 005 [ Distributed Python with GCP Pub/Sub ]
 
 %p This lesson shows how I used GCP Pub/Sub to coordinate a Python script.
 
