--- a/app/views/lessons/lesson009.html.haml
+++ b/app/views/lessons/lesson009.html.haml
@@ -2,7 +2,7 @@
 
 %p This lesson shows how I stepped through some Docker tasks.
 
-%h2 part-1: Create GCP Kubernetes Cluster of 1 Node
+%h2 Part-1: Create GCP Kubernetes Cluster of 1 Node
 
 %p
   Q: Why use GCP Kubernetes node to operate Docker?
@@ -54,7 +54,7 @@
 
 %img(src='/lesson009/z004.png')
 
-%h2 part-2: Run /bin/bash in new Docker Containers
+%h2 Part-2: Run /bin/bash in new Docker Containers
 
 %p
   I started by visiting this URL:
