--- a/app/views/lessons/lesson009.html.haml
+++ b/app/views/lessons/lesson009.html.haml
@@ -207,6 +207,11 @@
   I exited the container with the shell command: "exit".
 
 
+
+%h2 Part-3 Docker-build an Image
+
+
+
 %p
   %a(href='#top') [top]
 %hr/
