--- a/app/views/lessons/lesson009.html.haml
+++ b/app/views/lessons/lesson009.html.haml
@@ -211,7 +211,111 @@
 %h2 Part-3 Docker-build an Image
 
 
-
+%p
+  So, the initial creation of the container was slow because Docker needed to pull an "image" from the net.
+  
+%p
+  But, after the image was cached locally, I could access it instantly.
+  
+%p
+  So, those last two lessons showed how to create a container from an image and then run /bin/bash in the container.
+  
+%p
+  A main idea to remember about Docker is that I can get one or more containers from an image.
+  
+%p
+  Once I have a container, I can boot it up and then use it to support shell commands.
+  
+%p
+  I reviewed the two docker commands I ran above to create containers:
+.syntax
+  %pre
+    %code sudo docker run -it ubuntu:16.04 /bin/bash
+    %code sudo docker run -it continuumio/anaconda3 /bin/bash
+  
+%p
+  Both of the above commands depended on images that had been built for me by other people.
+  
+%p
+  Both of the images are stored on hub.docker.com:
+  
+%p
+  %a(href='https://hub.docker.com/_/ubuntu/' target='x')
+    https://hub.docker.com/_/ubuntu/
+  
+%p
+  %a(href='https://hub.docker.com/r/continuumio/anaconda3/' target='x')
+    https://hub.docker.com/r/continuumio/anaconda3/
+  
+  
+%p
+  Q: How do I create an image?
+%p
+  A: I create a file: "Dockerfile", then I use the "docker build" command to create an image.
+  
+%p
+  I followed the above information and wrote some notes.
+  
+%p
+  On the cluster-node, I entered some shell commands to create an image of my own:
+.syntax
+  %pre
+    %code
+      mkdir /dock1804
+      cd    /dock1804
+      echo From ubuntu:18.04 > Dockerfile
+      sudo docker build -t dock1804 .
+      sudo docker run  -it dock1804 /bin/bash
+  
+%p
+  That worked well.
+%ul
+  %li Next, I copied Dockerfile into a github repo.
+  %li
+    I connected that repo to the bikle101 account in 
+    %a(href='https://cloud.docker.com/' target='x')
+      https://cloud.docker.com/
+  %li I asked the site to build.
+  
+%p
+  Next I ran this shell command:
+.syntax
+  %pre
+    %code sudo docker run -it bikle101/dock1804 /bin/bash
+  
+%p
+  It worked great!
+  
+%p
+  An alternative:
+%ul
+  %li Clone the repo and cd into its folder.
+  %li Then type shell commands:
+  %li
+    .syntax
+      %pre
+        %code
+          sudo docker build -t dock1804 .
+          sudo docker run  -it dock1804 /bin/bash
+  
+%p
+  Here is a screen shot of me doing that:
+.syntax
+  %pre
+    =render 'lesson009ss1'
+  
+%p
+  Next, I exited the node-shell.
+  
+%p
+  Finally I deleted the 1-node-cluster from a link in this URL:
+%p
+  %a(href='https://console.cloud.google.com/kubernetes' target='x')
+    https://console.cloud.google.com/kubernetes
+  
+  
+  
 %p
   %a(href='#top') [top]
 %hr/
+
