--- a/app/views/lessons/lesson009.html.haml
+++ b/app/views/lessons/lesson009.html.haml
@@ -261,11 +261,12 @@
 .syntax
   %pre
     %code
-      mkdir /dock1804
-      cd    /dock1804
+      mkdir ~/dock1804
+      cd    ~/dock1804
       echo From ubuntu:18.04 > Dockerfile
       sudo docker build -t dock1804 .
       sudo docker run  -it dock1804 /bin/bash
+      exit
   
 %p
   That worked well.
@@ -314,7 +315,74 @@
     https://console.cloud.google.com/kubernetes
   
   
+%h2 Lesson Summary:
+%ul
+  %li Part-1
+  %li visit:
+  %li
+    %a(href='https://console.cloud.google.com' target='x')
+      https://console.cloud.google.com
   
+  %li Login to GCP
+  %li visit:
+  %li
+    %a(href='https://console.cloud.google.com/kubernetes' target='x')
+      https://console.cloud.google.com/kubernetes
+  
+  %li Create a Kubernetes Cluster with just 1 node
+  %li visit:
+  %li
+    %a(href='https://console.cloud.google.com/compute' target='x')
+      https://console.cloud.google.com/compute
+  %li In GCP, Find the resulting instance
+  %li Part-2
+  %li Login via SSH link
+  %li Run:
+  %li
+    .syntax
+      %pre
+        %code sudo docker run -it ubuntu:16.04 /bin/bash
+  %li exit container
+  %li Run:
+  %li
+    .syntax
+      %pre
+        %code sudo docker run -it continuumio/anaconda3 /bin/bash
+  %li Test python
+  %li exit container
+  %li Part-3
+  %li
+    .syntax
+      %pre
+        %code
+          mkdir ~/dock1804
+          cd    ~/dock1804
+          echo From ubuntu:18.04 > Dockerfile
+          sudo docker build -t dock1804 .
+          sudo docker run  -it dock1804 /bin/bash
+          exit
+  %li
+    .syntax
+      %pre
+        %code sudo docker run -it bikle101/dock1804 /bin/bash
+  
+  %li
+    .syntax
+      %pre
+        %code
+          cd ~
+          git clone https://github.com/danbikle/dock1804
+          cd dock1804
+          sudo docker build -t dock1804 .
+          sudo docker run  -it dock1804 /bin/bash
+          exit
+
+  %li visit:
+  %li
+    %a(href='https://console.cloud.google.com/kubernetes' target='x')
+      https://console.cloud.google.com/kubernetes
+  %li Delete the 1-node-cluster to limit GCP cost         
+          
 %p
   %a(href='#top') [top]
 %hr/
