--- a/app/views/lessons/index.html.haml
+++ b/app/views/lessons/index.html.haml
@@ -11,4 +11,9 @@
     %a(href='/lessons/lesson004') Lesson 004 [ Google GCP Dataflow ]
   %li
     %a(href='/lessons/lesson005') Lesson 005 [ Distributed Python with GCP Pub/Sub ]
+  %li  Lesson 006 [ Under Construction ]
+  %li  Lesson 007 [ Under Construction ]
+  %li  Lesson 008 [ Under Construction ]
+  %li
+    %a(href='/lessons/lesson009') Lesson 009 [ Simple Docker Introductory Tutorial ]
 
