--- a/app/views/layouts/_links_bottom.html.haml
+++ b/app/views/layouts/_links_bottom.html.haml
@@ -4,5 +4,6 @@
 %a(href='/blog') Blog
 %a(href='/contact') Contact
 %a(href='/home/links') Links
+%a(href='https://meetup.com/cs101a' target='x') Meetup
 %a(href='/lessons') Lessons
 
