--- a/app/views/lessons/lesson005.html.haml
+++ b/app/views/lessons/lesson005.html.haml
@@ -1,5 +1,7 @@
 %h1#top Lesson 005 [ Distributed Python with GCP Pub/Sub ]
 
+%h2 Introduction
+
 %p This lesson shows how I used GCP Pub/Sub to coordinate a Python script.
 
 %p The script is named workon_tkrs.py.
@@ -7,6 +9,8 @@
 %p The script was deployed across a GCP-Kubernetes cluster.
 
 %p Deployment was done using the GCP web-UI and ssh.
+
+%h2 Inspiration
 
 %p This lesson is inspired by a Will Crichton and his github repo:
 
@@ -21,6 +25,12 @@
   %a(href='http://willcrichton.net/notes/gcp-job-queue/' target='x')
     http://willcrichton.net/notes/gcp-job-queue/
 
+%h2 Create GCP Account
+
+%p If you want to follow the steps listed in this lab, you will need to create a GCP account.
+
+
+%h2 Part 1:
 %p
   I list below steps I followed to create a simple GCP job-queue:
 
