--- a/app/views/lessons/lesson005.html.haml
+++ b/app/views/lessons/lesson005.html.haml
@@ -51,6 +51,12 @@
     
 %p After you have a GCP account which has been "upgraded", you will be on a good path.
 
+%p During project creation, GCP will give you an opportunity to attach your ssh-public-key to that project.
+
+%p If you have a ssh-public-key, and know how to use it, you should take advantage of that opportunity.
+
+%p Otherwise, ignore ssh for now.
+
 
 %h2 Part 1:
 %p
@@ -85,22 +91,22 @@
     At
     %a(href='https://console.cloud.google.com/iam-admin/serviceaccounts' target='x')
       https://console.cloud.google.com/iam-admin/serviceaccounts
-  %li
-    I created a service account: "srvacct":
-  %li I saw this:
+  %li I created a service account: "srvacct"
+  %li During that process, I asked GCP to generate a key for that account.
+  %li When GCP generated the key, it asked to place the key in my Downloads-folder.
+  %li I allowed that download to happen.
+  %li After that, I copied the key to: ~/Downloads/service-key.json
+  %li service-key.json was used later.
+  %li Eventually, I saw this:
   %li
     %img(src='/lesson005/z003.png')
 
   %li
-    Create service-key.json:
+    I learned that I can create service-key.json at will:
+  %li
     %a(href='https://console.cloud.google.com/iam-admin/serviceaccounts' target='x')
       https://console.cloud.google.com/iam-admin/serviceaccounts
-  %li
-    click-permissions, select role: pub/sub-admin, generate a key:
-    %br/
-    \~/Downloads/pubsub-e71b0ed6e643.json
-    copy downloaded-file to service-key.json
-  %li I did that by starting here:
+  %li I can do that by starting here:
   %li
     %img(src='/lesson005/z004.png')
   
@@ -154,10 +160,27 @@
   %li
     On laptop I did this:
     %br
-    vi .ssh/config
+    vi ~/.ssh/config
     .syntax
       %pre
         =render 'lesson005a'
+  %li When I work on windows, I ensure that I have this software installed:
+  %li
+    %a(href='https://git-scm.com/downloads' target='x')
+      https://git-scm.com/downloads
+  %li The above software allows a windows-user to properly operate ssh.
+  %li Proper operation means the following:
+  %li
+    %ul
+      %li That ~/.ssh/config will affect ssh behavior
+      %li The user has access to bash
+      %li The user can create ssh-keys
+      %li The user can issue shell commands like this:
+      %li scp ~/somefile.txt somehost:
+      %li ssh -i ~/.ssh/somekey.txt someuser@somehost
+  %li If you are using putty to operate ssh on your windows-laptop, I advise you to avoid putty while working with GCP.
+  %li Instead, use ssh from git-scm.com.
+  
 %h2 Part 6:
 %ul
   %li ssh into both mgr and worker
