--- a/app/views/lessons/lesson005.html.haml
+++ b/app/views/lessons/lesson005.html.haml
@@ -83,7 +83,33 @@
   %li Eventually I gained a sense of how GCP pages are affected by projects.
   %li Initially I ignored projects which led me to some confusing situations.
   %li Enough about projects.
-  %li I enabled some APIs.
+  %li I enabled some APIs which are listed below:
+  %li
+    %ul
+      %li
+        %a(href='https://console.cloud.google.com/apis/library/compute.googleapis.com' target='x')
+          https://console.cloud.google.com/apis/library/compute.googleapis.com
+      %li
+        %a(href='https://console.cloud.google.com/apis/library/container.googleapis.com' target='x')
+          https://console.cloud.google.com/apis/library/container.googleapis.com
+      %li
+        %a(href='https://console.cloud.google.com/apis/library/pubsub.googleapis.com' target='x')
+          https://console.cloud.google.com/apis/library/pubsub.googleapis.com
+      %li
+        %a(href='https://console.cloud.google.com/apis/library/storage-component.googleapis.com' target='x')
+          https://console.cloud.google.com/apis/library/storage-component.googleapis.com
+
+
+  %li I verified the enabled APIs and captured screen-shots:
+  %li
+    %img(src='/lesson005/zapi1.png')
+  %li
+    %img(src='/lesson005/zapi2.png')
+  %li
+    %img(src='/lesson005/zapi3.png')
+  %li
+    %img(src='/lesson005/zapi4.png')
+  
   %li
     I created a bucket: pubsub611
     %br/
