--- a/app/views/lessons/lesson005.html.haml
+++ b/app/views/lessons/lesson005.html.haml
@@ -100,8 +100,9 @@
           https://console.cloud.google.com/apis/library/storage-component.googleapis.com
 
 
-  %li I verified the enabled APIs and captured screen-shots:
+  %li I verified the enabled APIs and then captured screen-shots:
   %li
+    %br/
     %img(src='/lesson005/zapi1.png')
   %li
     %img(src='/lesson005/zapi2.png')
@@ -111,7 +112,7 @@
     %img(src='/lesson005/zapi4.png')
   
   %li
-    I created a bucket: pubsub611
+    Next, I created a bucket: pubsub611
     %br/
     %a(href='https://console.cloud.google.com/storage' target='x')
       https://console.cloud.google.com/storage
@@ -166,7 +167,8 @@
 %h2 Part 4:
 %ul
   %li
-    I Created cluster cluster10,
+    I created a cluster named cluster10.
+  %li
     I made it Ubuntu with 3.75 gb ram, I ensured it has full access to cloud-APIs.
     %br
     %a(href='https://console.cloud.google.com/kubernetes' target='x')
@@ -199,7 +201,7 @@
 %h2 Part 5:
 %ul
   %li
-    On laptop I did this:
+    On my laptop I did this:
     %br
     vi ~/.ssh/config
     .syntax
@@ -224,7 +226,7 @@
   
 %h2 Part 6:
 %ul
-  %li ssh into both mgr and worker
+  %li I used ssh log-into both mgr and worker.
   %li
     On both hosts, I installed Python 3 via Anaconda:
   %li
