--- a/app/views/lessons/lesson005.html.haml
+++ b/app/views/lessons/lesson005.html.haml
@@ -119,7 +119,14 @@
   %li I saw this:
   %li
     %img(src='/lesson005/z002.png')
-
+  %li Next, I created a test-topic and a subscription inside of Pub/Sub.
+  %li It was very easy to do using the URL listed below:
+  %li
+    %a(href='https://console.cloud.google.com/cloudpubsub' target='x')
+      https://console.cloud.google.com/cloudpubsub
+  %li After I did that I collected a screen-shot:
+  %li
+    %img(src='/lesson005/zps1.png')
 
 %h2 Part 2:
 %ul
