--- a/app/views/lessons/lesson003.html.haml
+++ b/app/views/lessons/lesson003.html.haml
@@ -464,6 +464,8 @@
   %li
     In Python how to create a "Scatter Plot"?
     
+  %li How to run Python in Google Colab?
+  
   %li How to upload a CSV file to Google Colab?
   
   %li How to see my uploaded files in Google Colab?
